# MAIR

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_zh.md  Xsan_config.cmake  gcc.patch  llvm.patch  xsan_config.cmake
evaluation/: README.md  (+11 more)
src/: CMakeLists.txt
src/cmake/: AddWrapSyms.cmake  ConfigLLVMCompiler.cmake  Message.cmake  XSanUtils.cmake  XsanBuildInstallPack.cmake
src/compiler/: CMakeLists.txt  clang_wrapper.c  config_build_dir.h.in  config_compile.h.in  gcc_wrapper.c  xsan_wrapper_helper.c  xsan_wrapper_helper.c.inc  xsan_wrapper_helper.h
src/compiler/livepatch/: CMakeLists.txt  support_dso_injection.sh
src/compiler/livepatch/clang/: BackendUtil.cpp  CMakeLists.txt  CommonArgs.cpp  PassBuilderPipelines.cpp  SanitizerArgs.cpp
src/compiler/livepatch/clang-15/: BackendUtil.cpp  CMakeLists.txt  CommonArgs.cpp  PassBuilderPipelines.cpp  SanitizerArgs.cpp
src/compiler/livepatch/gcc/: CMakeLists.txt  diagnostic.cpp  dump_gcc_spec.py  gcc.cpp  gcc_spec_gen.cmake
src/compiler/livepatch/gcc-9.4/: CMakeLists.txt  diagnostic.cpp  gcc.cpp
src/compiler/livepatch/utils/: ELFHelper.cpp  ELFHelper.h  PatchHelper.cpp  PatchHelper.h
src/compiler/patch_dso/: BackendUtil.cpp  CMakeLists.txt  CommonArgs.cpp  PassBuilderPipelines.cpp  SanitizerArgs.cpp  support_dso_injection.sh
src/compiler/patch_dso/utils/: PatchHelper.cpp  PatchHelper.h
src/include/: common-enum.h  debug.h  xsan_common.h  xsan_platform_mapping.h
src/instrumentation/: .clang-tidy  AddressSanitizer.cpp  AttributeTaggingPass.cpp  AttributeTaggingPass.hpp  CMakeLists.txt  Instrumentation.cpp  Instrumentation.h  MemorySanitizer.cpp  PassRegistry.cpp  PassRegistry.h  TestPass.cpp  ThreadSanitizer.cpp  UbsanInstTagging.cpp  UbsanInstTagging.hpp  XSanitizerCompositor.cpp
src/instrumentation/Analysis/: ActiveMopAnalysis.cpp  ActiveMopAnalysis.h  MopRecurrenceReducer.cpp  MopRecurrenceReducer.h  TsanMopAnalysis.cpp  TsanMopAnalysis.h
src/instrumentation/MopIR/: PLAN.md  REFACTORING_GUIDE.md
src/instrumentation/MopIR/docs/: ACCESS_PATTERN_ANALYSIS.md  ACCESS_PATTERN_SUMMARY.md  ANNOTATION_GUIDE.md  ANNOTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  QUICK_START_ANNOTATION.md
src/instrumentation/MopIR/include/: ActiveMopAnalysis.h  MOPState.h  Mop.h  MopAnalysis.h  MopBuilder.h  MopContext.h  MopIR.h  MopIRAnnotator.h  MopOptimizer.h
src/instrumentation/MopIR/lib/: ActiveMopAnalysis.cpp  MOPState.cpp  Mop.cpp  MopAnalysis.cpp  MopBuilder.cpp  MopIR.cpp  MopIRAnnotator.cpp  MopOptimizer.cpp  MopRedundancyAnalysis.cpp
src/instrumentation/MopIR/test_temp/: .gitignore  SimpleMopConverter.cpp  simple_test.ll  test_asan.c  test_tsan.c
src/instrumentation/MopIRImplementation/: CMakeLists.txt  README.md
src/instrumentation/MopIRImplementation/include/: IRUnit.h  MopIRImplementation.h  Pass.h  PassContext.h  PassManager.h
src/instrumentation/Utils/: InstUtils.cpp  InstUtils.h  Logging.cpp  Logging.h  MetaDataUtils.cpp  MetaDataUtils.h  Options.cpp  Options.h  UbsanUtils.cpp  UbsanUtils.h  ValueUtils.cpp  ValueUtils.h
src/runtime/: CMakeLists.txt
src/runtime/cmake/: config-ix.cmake
src/runtime/cmake/Modules/: AllSupportedArchDefs.cmake
src/runtime/include/: CMakeLists.txt
src/runtime/lib/: CMakeLists.txt
src/runtime/test/: CMakeLists.txt  lit.common.cfg.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/asan/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/asan/Linux/: interface_symbols_linux.cpp
test/asan/TestCases/: alloca_big_alignment.cpp  alloca_constant_size.cpp  alloca_detect_custom_size_.cpp  alloca_overflow_partial.cpp  alloca_overflow_right.cpp  alloca_underflow_left.cpp  asan_options-help.cpp  asan_update_allocation.cpp  atexit_stats.cpp  calloc-overflow.cpp  contiguous_container_crash.cpp  debug_double_free.cpp  debug_report.cpp  debug_stacks.cpp  deep_stack_uaf.cpp  deep_tail_call.cpp  default_options.cpp  double-free.cpp  error_report_callback.cpp  global-address.cpp  global-location-nodebug.cpp  global-location.cpp  global-underflow.cpp  handle_noreturn_bug.cpp  heavy_uar_test.cpp  ill.cpp  init-order-atexit.cpp  initialization-bug.cpp  intra-object-overflow.cpp  invalid-free.cpp  invalid-pointer-pairs-compare-errors.cpp  invalid-pointer-pairs-subtract-errors.cpp  invalid-pointer-pairs.cpp  large_func_test.cpp  leaks.cpp  load_and_store_n.cpp  log-path_test.cpp  malloc-size-too-big.cpp  malloc_context_size.cpp  memcmp_strict_test.cpp  (+42 more)
test/cmake/: AddTsanTestVar.cmake  VarTestTsan.cmake
test/msan/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/msan/TestCases/: bsearch.cpp  coverage-levels.cpp  dso-origin.cpp  dtor-base-access.cpp  dtor-vtable-multiple-inheritance.cpp  heap-origin.cpp  ifaddrs.cpp  ioctl.cpp  ioctl_custom.cpp  loop-scope.cpp  memcmp_test.cpp  mmap.cpp  mmap_below_shadow.cpp  poison_in_free.cpp  pr32842.c  qsort.cpp  recover.cpp  release_origin.c  scoped-interceptors.cpp  select.cpp  stack-origin.cpp  stack-origin2.cpp  strlen_of_shadow.cpp  use-after-dtor.cpp  use-after-free.cpp  vararg.cpp
test/tsan/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/tsan/TestCases/: aligned_vs_unaligned_race.cpp  atexit4.cpp  atexit5.cpp  atomic_free2.cpp  atomic_norace.cpp  atomic_norace2.cpp  atomic_race.cpp  barrier.cpp  compare_exchange.cpp  cond_destruction.cpp  cond_race.cpp  custom_mutex1.cpp  custom_mutex2.cpp  debugging.cpp  dtls.c  fd_location_closed.cpp  fiber_cleanup.cpp  fork_multithreaded.cpp  fork_multithreaded3.cpp  free_race.c  free_race2.c  ignore_lib1.cpp  ignore_lib2.cpp  ignore_lib3.cpp  ignore_lib4.cpp  ignore_lib5.cpp  ignore_lib6.cpp  ignorelist.cpp  ignorelist2.cpp  java_volatile.cpp  malloc_overflow.cpp  memcmp_race.cpp  must_deadlock.cpp  mutex_bad_read_lock.cpp  mutex_bad_read_unlock.cpp  mutex_bad_unlock.cpp  mutex_cycle2.c  mutex_cycle_long.c  mutex_destroy_locked.cpp  mutex_destroy_locked2.cpp  (+26 more)
test/ubsan/: CMakeLists.txt  lit.common.cfg.py  lit.site.cfg.py.in
test/xsan/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/xsan/TestCases/: basic-test.cpp  loop-period-access.c
(+634 files in other folders)
